fixed logo display on small screens

--- a/app/assets/stylesheets/_predictions.scss
+++ b/app/assets/stylesheets/_predictions.scss
@@ -8,7 +8,7 @@
     text-align: center;
 
     strong {
-      font-align: center;
+      text-align: center;
       font-size: 3em;
     }
 
